[gd_scene load_steps=6 format=3 uid="uid://d0psqdiovqmy8"]

[ext_resource type="Script" path="res://scenes/menu/main_menu.gd" id="1_46h0q"]
[ext_resource type="Theme" uid="uid://bcihimekk2fq0" path="res://themes/ui.tres" id="3_c1x3u"]
[ext_resource type="Shader" path="res://shaders/glitch.gdshader" id="3_kfdc0"]
[ext_resource type="Texture2D" uid="uid://dgfw5dh42i3qk" path="res://icon.svg" id="4_tu3lh"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_31tw3"]
shader = ExtResource("3_kfdc0")
shader_parameter/range = 0.05
shader_parameter/noiseQuality = 250.0
shader_parameter/noiseIntensity = 0.0088
shader_parameter/offsetIntensity = 0.03
shader_parameter/colorOffsetIntensity = 1.3

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46h0q")

[node name="Quit" type="Button" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
offset_left = 28.0
offset_top = 598.0
offset_right = 128.0
offset_bottom = 625.0
theme = ExtResource("3_c1x3u")
text = "Quit"
expand_icon = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -121.5
offset_right = 150.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3_c1x3u")
text = "Play"
expand_icon = true

[node name="Margin" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 10

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme = ExtResource("3_c1x3u")
text = "Options"
expand_icon = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Effect" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_31tw3")
position = Vector2(573.5, 323.5)
scale = Vector2(8.96094, 5.03906)
texture = ExtResource("4_tu3lh")

[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
